--- a/package.json
+++ b/package.json
@@ -40,5 +40,8 @@
     "webpack": "5.37.1",
     "webpack-cli": "4.7.0",
     "webpack-merge": "5.7.3"
+  },
+  "dependencies": {
+    "netlify-cli": "^3.31.5"
   }
 }
